--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+
 <link rel="stylesheet" href="main.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title></title>
@@ -26,7 +28,7 @@
 
 
   </head>
-  <body class="bg">
+  <body >
 
     <nav class="navbar navbar-expand-sm py-1 bg-dark navbar-dark justify-content-center fixed-top">
     <!-- Brand -->
@@ -73,9 +75,13 @@
           <i class="fa fa-map-marker" style="font-size:24px" ></i>
         </a>Address:Barrackpore,Kolkata-700122</h4>
     <h4 class="quote">  B.Tech(Computer science and engineering),National Institute of Technology,Durgapur</h4>
+  </div></div></div>
 
-
-    <br><br><br>
+    <br><br>
+    <div class="row"><div class="col-sm-4"><img src="/home/proma/webst/20190531_014446.jpg"><div class="head">  <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-linkedin"></a> <h5><i class="fa fa-phone" style="font-size:24px"></i>Contact No: 8420042422<br>Email <i class="fa fa-envelope" style="font-size:24px"></i><br>promaroy20@gmail.com</h5>
+  </div>  </div><div class="col-sm-3"></div>
+   <div class="col-sm-4">
     <div id="demo" class="carousel slide" data-ride="carousel">
 
  <!-- Indicators -->
@@ -84,7 +90,7 @@
    <li data-target="#demo" data-slide-to="1"></li>
    <li data-target="#demo" data-slide-to="2"></li>
    <li data-target="#demo" data-slide-to="3"></li>
- </ul>
+ </ul><br><br>
 
  <!-- The slideshow -->
  <div class="carousel-inner">
@@ -101,7 +107,7 @@
    </div>
    <div class="carousel-item">
      <a href="#section4"><h1 style = "color:white"><b>Projects</b></h1><hr><br><p style="color:white">This secion includes the projects on which I have worked and also the ones I am currently working on.The project links have been provided.</p></a>
- </div></div><br><br>
+ </div></div><br><br><br>
 
  <!-- Left and right controls -->
  <a class="carousel-control-prev" href="#demo" data-slide="prev">
@@ -117,9 +123,7 @@
 
 
 
-      <div class="head">  <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-linkedin"></a> <h5><i class="fa fa-phone" style="font-size:24px"></i>Contact No: 8420042422<br>Email <i class="fa fa-envelope" style="font-size:24px"></i><br>promaroy20@gmail.com</h5>
-    </div>
+
     </div></div></div></div>
     <div id="section2">
 
@@ -153,22 +157,23 @@
   <br><br>
   <div class="container"><div class="sec">
     <div class="row">
-      <div class="col-sm-2"></div>
-      <div class="col-sm-8">
+
+      <div class="col-sm-5">
       <div class="box"><h5><b>Voice to text conversion</b></h5><hr>
              This project was created using python3.It uses Google audio recogniser to convert speech to text.The prerequisites for setting
                up this project have been mentioned in the readme.md file.Click <span class="boxin"><a href="https://github.com/promaroy/speech_recog">here</a></span> to view the project.
-    </div><br>
-    <div class="box">
+  </div>  </div><br>
+  <div class="col-sm-1"></div><div class="col-sm-5">  <div class="box">
      <h5><b>Webscraping using python</b></h5><hr>
         The project was created using python3 and selenium.With the help of this python script ones
           can easily submit a problem to codechef through the terminal without logging in. Click<span class="boxin"> <a href="https://github.com/promaroy/autocoding">here</a></span> to view the project.
-    </div><br>
-
+    </div></div></div><br><br>
+ <div class="row"><div class="col-sm-5">
     <div class="box">  <h5><b>Django hello world app</b></h5><hr>
         This project was created using a python framework django.It is a simple hello world app
           made as a part of glug task.Hope to improve it in near future.<br> Click <span class="boxin"><a href="https://github.com/promaroy/django1">here</a></span> to view the project.
-    </div>
+    </div></div><div class="col-sm-1"></div><div class="col-sm-5"><div class="box"><h5><b>Weather app</b></h5><hr>
+    This project was created in Django.It calls an API to display the weather of any city around the world. I am currently working on this project to further improve its functionality.<br> Click <span class="boxin"><a href="https://github.com/promaroy/weatherapp">here</a></span> to view the project.</div>
   </div></div></div></div><br><br></div></div>
 
   <!-- Left and right controls -->
