--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   </div></div></div>
 
     <br><br>
-    <div class="row"><div class="col-sm-4"><img src="/home/proma/webst/20190531_014446.jpg"><div class="head">  <a href="#" class="fa fa-facebook"></a>
+    <div class="row"><div class="col-sm-4"><img src="20190531_014446.jpg"><div class="head">  <a href="#" class="fa fa-facebook"></a>
           <a href="#" class="fa fa-linkedin"></a> <h5><i class="fa fa-phone" style="font-size:24px"></i>Contact No: 8420042422<br>Email <i class="fa fa-envelope" style="font-size:24px"></i><br>promaroy20@gmail.com</h5>
   </div>  </div><div class="col-sm-3"></div>
    <div class="col-sm-4">
