added css transitions

--- a/index.html
+++ b/index.html
@@ -15,16 +15,21 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+
 
 <link rel="stylesheet" href="main.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <title></title>
     <script>
 	$(document).ready(function(){
 		$("#myModal").modal('show');
 	});
  </script>
+
+
+
 
 
   </head>
@@ -124,19 +129,24 @@
 
 
 
-    </div></div></div></div>
+</div></div></div></div>
+
     <div id="section2">
 
     <div class="edu"><br><br><h1 class="head">Education</h1><br><p class="quote"><i>The whole purpose of education is to turn mirrors into windows</i><br>--Sydney J. Harris</p>
   </div><div class="each"><br><div class="container-fluid"><div class="sec">
     <div class="row">
       <div class="col-sm-3"></div>
-      <div class="col-sm-6"><div class="box"><h6>Modern School</h6><br><span class="boxin">Location</span> Barrackpore,Kolkata-700122
+      <div class="col-sm-6">
+
+
+
+<div class="box" data-aos="flip-right"><h6>Modern School</h6><br><span class="boxin">Location</span> Barrackpore,Kolkata-700122
         <br><span class="boxin">Years present</span>2003-2010</div><br><br>
-      <div class="box"><h6>Modern English Academy</h6><br><span class="boxin">Location</span>Barrackpore,Kolkata-700122<br>
+      <div class="box" data-aos="flip-left"><h6>Modern English Academy</h6><br><span class="boxin">Location</span>Barrackpore,Kolkata-700122<br>
         <span class="boxin">Years present</span>2010-2018<br>Scored 97.4% in ICSE(2016)and  95.4% in CBSE(2018)</div><br><br>
 
-      <div class="box"><h6>National Institute of Technology,Durgapur</h6><span class="boxin">Location</span> Durgapur<br>
+      <div class="box" data-aos="flip-right"><h6>National Institute of Technology,Durgapur</h6><span class="boxin">Location</span> Durgapur<br>
         <span class="boxin">Years present</span>2018-2022</div><div class="col-sm-3"> </div></div> </div></div></div>
   <br><br></div> <div id="section3">
    <div class="edu"><h1 class="head">Technical Skills</h1><br><p class="quote"><i>Skill and confidence are unconquered army</i><br><b>--George Herbert</b></p>
@@ -144,8 +154,8 @@
      <div class="row">
       <!-- <div class="col-sm-3"></div>-->
        <div class="col-sm-3"></div>
-      <div class="col-sm-6"><div class="box"><span class="boxin"><b>C++</b></span>  one of my most preferrable languages for competitive programming.</div><br><div class="box"><span class="boxin"><b>C</b></span> learned it as a part of curriculum.</div><br><div class="box"><span class="boxin"><b>Git</b></span> the only VCS which I use to keep track of my projects.</div><br><div class="box"> <span class="boxin"><b>Python</b></span> used Python as a scripting language for web scraping and in my project related to computer vision.
-      </div><br><div class="box"><span class="boxin"><b>Arduino</b></span> prepared a bot(line follower and obstacle avoider) for Robocity</div><br><div class="box"><span class="boxin"><b>Html5</b></span> used it for preparing layout of this web page.</div><br><div class="box"><span class="boxin"><b>CSS</b></span> used for styling this web page.</div><br><div class="box"><span class="boxin"><b>Bootstrap</b></span> used for styling this web page.</div>
+      <div class="col-sm-6"><div class="box" data-aos="zoom-in-up"><span class="boxin"><b>C++</b></span>  one of my most preferrable languages for competitive programming.</div><br><div class="box" data-aos="zoom-in-up"><span class="boxin"><b>C</b></span> learned it as a part of curriculum.</div><br><div class="box" data-aos="zoom-in-up"><span class="boxin"><b>Git</b></span> the only VCS which I use to keep track of my projects.</div><br><div class="box" data-aos="zoom-in-up"> <span class="boxin"><b>Python</b></span> used Python as a scripting language for web scraping and in my project related to computer vision.
+      </div><br><div class="box" data-aos="zoom-in-up"><span class="boxin"><b>Arduino</b></span> prepared a bot(line follower and obstacle avoider) for Robocity</div><br><div class="box" data-aos="zoom-in-up"><span class="boxin"><b>Html5</b></span> used it for preparing layout of this web page.</div><br><div class="box" data-aos="zoom-in-up"><span class="boxin"><b>CSS</b></span> used for styling this web page.</div><br><div class="box" data-aos="zoom-in-up"><span class="boxin"><b>Bootstrap</b></span> used for styling this web page.</div>
     </div></div></div></div></div>
 
 
@@ -159,20 +169,24 @@
     <div class="row">
 
       <div class="col-sm-5">
-      <div class="box"><h5><b>Voice to text conversion</b></h5><hr>
+      <div class="box" data-aos="fade-up"
+     data-aos-anchor-placement="center-bottom"><h5><b>Voice to text conversion</b></h5><hr>
              This project was created using python3.It uses Google audio recogniser to convert speech to text.The prerequisites for setting
                up this project have been mentioned in the readme.md file.Click <span class="boxin"><a href="https://github.com/promaroy/speech_recog">here</a></span> to view the project.
   </div>  </div><br>
-  <div class="col-sm-1"></div><div class="col-sm-5">  <div class="box">
+  <div class="col-sm-1"></div><div class="col-sm-5">  <div class="box" data-aos="fade-down"
+     data-aos-anchor-placement="center-bottom">
      <h5><b>Webscraping using python</b></h5><hr>
         The project was created using python3 and selenium.With the help of this python script ones
           can easily submit a problem to codechef through the terminal without logging in. Click<span class="boxin"> <a href="https://github.com/promaroy/autocoding">here</a></span> to view the project.
     </div></div></div><br><br>
  <div class="row"><div class="col-sm-5">
-    <div class="box">  <h5><b>Django hello world app</b></h5><hr>
+    <div class="box" data-aos="fade-up"
+     data-aos-anchor-placement="center-bottom">  <h5><b>Django hello world app</b></h5><hr>
         This project was created using a python framework django.It is a simple hello world app
           made as a part of glug task.Hope to improve it in near future.<br> Click <span class="boxin"><a href="https://github.com/promaroy/django1">here</a></span> to view the project.
-    </div></div><div class="col-sm-1"></div><div class="col-sm-5"><div class="box"><h5><b>Weather app</b></h5><hr>
+    </div></div><div class="col-sm-1"></div><div class="col-sm-5"><div class="box" data-aos="fade-down"
+     data-aos-anchor-placement="center-bottom"><h5><b>Weather app</b></h5><hr>
     This project was created in Django.It calls an API to display the weather of any city around the world. I am currently working on this project to further improve its functionality.<br> Click <span class="boxin"><a href="https://github.com/promaroy/weatherapp">here</a></span> to view the project.</div>
   </div></div></div></div><br><br></div></div>
 
@@ -202,5 +216,9 @@
     </div>
 </div>
 </div></div>
+<script>
+AOS.init({
+ duration: 1200,
+})</script>
   </body>
 </html>
