--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </head>
   <body >
 
-    <nav class="navbar navbar-expand-sm py-1 bg-dark navbar-dark justify-content-center fixed-top">
+    <nav class="navbar navbar-expand-sm py-1 bg-primary navbar-dark justify-content-center fixed-top">
     <!-- Brand -->
     <a class="navbar-brand" href="#section1"><i class="fa fa-home"></i></a>
 
@@ -60,7 +60,10 @@
           <a class="nav-link" href="#section4"><i class="fa fa-desktop" style="font-size:24px"></i>Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#section5"><i class="fa fa-phone" style="font-size:24px"></i>Contact</a>
+          <a class="nav-link" href="#section5"><i class="fa fa-asterisk" style="font-size:24px"></i>Other Achievements</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#section6"><i class="fa fa-phone" style="font-size:24px"></i>Contact</a>
         </li>
       </ul>
     </div>
@@ -76,7 +79,7 @@
         <div class="col-sm-10">
 
       <h2 class="head"><b>---Proma Roy---</b></h2>
-      <h4 class="quote"><a href="https://goo.gl/maps/FNTzXZYnj5K7RUTF9">
+      <h4 class="q"><a href="https://goo.gl/maps/FNTzXZYnj5K7RUTF9">
           <i class="fa fa-map-marker" style="font-size:24px" ></i>
         </a>Address:Barrackpore,Kolkata-700122</h4>
     <h4 class="quote">  B.Tech(Computer science and engineering),National Institute of Technology,Durgapur</h4>
@@ -101,7 +104,7 @@
  <div class="carousel-inner">
    <div class="carousel-item active">
      <h1><b>About me</h1></b>
-<p >Hii there! I am a freshman pursuing B.Tech in Computer Science and engineering in Nit Durgapur
+<p >Hii there! Currently pursuing B.Tech in Computer Science and engineering in Nit Durgapur
 .I love to solve problems.Whether it's the most elegant way to write a line of code or  discovering the solution.</p>
    </div>
    <div class="carousel-item">
@@ -111,7 +114,7 @@
      <a href="#section3"><h1 style = "color:white"><b>Technical Skills</b></h1><hr><br><p style="color:white"> This section includes the technical skills which I possess and the tools and technologies which I use frequently in my projects.</p></a>
    </div>
    <div class="carousel-item">
-     <a href="#section4"><h1 style = "color:white"><b>Projects</b></h1><hr><br><p style="color:white">This secion includes the projects on which I have worked and also the ones I am currently working on.The project links have been provided.</p></a>
+     <a href="#section4"><h1 style = "color:white"><b>Projects</b></h1><hr><br><p style="color:white">This section includes the projects on which I have worked and also the ones I am currently working on.The project links have been provided.</p></a>
  </div></div><br><br><br>
 
  <!-- Left and right controls -->
@@ -141,21 +144,21 @@
 
 
 
-<div class="box" data-aos="flip-right"><h6>Modern School</h6><br><span class="boxin">Location</span> Barrackpore,Kolkata-700122
-        <br><span class="boxin">Years present</span>2003-2010</div><br><br>
-      <div class="box" data-aos="flip-left"><h6>Modern English Academy</h6><br><span class="boxin">Location</span>Barrackpore,Kolkata-700122<br>
-        <span class="boxin">Years present</span>2010-2018<br>Scored 97.4% in ICSE(2016)and  95.4% in CBSE(2018)</div><br><br>
 
+      <div class="box" data-aos="flip-left"><h6>Modern English Academy</h6><br><span class="boxin">Location</span>Barrackpore,Kolkata-700122<br>
+        <span class="boxin">Years present</span>2010-2016<br>Scored 97.4% in ICSE(2016)</div><br><br>
+        <div class="box" data-aos="flip-right"><h6>Bholananda National Vidyalaya</h6><br><span class="boxin">Location</span> Barrackpore,Kolkata-700122
+                <br><span class="boxin">Years present</span>2016-2018<br> Scored 95.4% in CBSE Boards.</div><br><br>
       <div class="box" data-aos="flip-right"><h6>National Institute of Technology,Durgapur</h6><span class="boxin">Location</span> Durgapur<br>
-        <span class="boxin">Years present</span>2018-2022</div><div class="col-sm-3"> </div></div> </div></div></div>
+        <span class="boxin">Years present</span>2018-2022<br> CGPA-8.74/10.0 till 3rd sem.</div><div class="col-sm-3"> </div></div> </div></div></div>
   <br><br></div> <div id="section3">
    <div class="edu"><h1 class="head">Technical Skills</h1><br><p class="quote"><i>Skill and confidence are unconquered army</i><br><b>--George Herbert</b></p>
    </div><div class="each"><br><br><div class="container">
      <div class="row">
       <!-- <div class="col-sm-3"></div>-->
        <div class="col-sm-3"></div>
-      <div class="col-sm-6"><div class="box" data-aos="zoom-in-up"><span class="boxin"><b>C++</b></span>  one of my most preferrable languages for competitive programming.</div><br><div class="box" data-aos="zoom-in-up"><span class="boxin"><b>C</b></span> learned it as a part of curriculum.</div><br><div class="box" data-aos="zoom-in-up"><span class="boxin"><b>Git</b></span> the only VCS which I use to keep track of my projects.</div><br><div class="box" data-aos="zoom-in-up"> <span class="boxin"><b>Python</b></span> used Python as a scripting language for web scraping and in my project related to computer vision.
-      </div><br><div class="box" data-aos="zoom-in-up"><span class="boxin"><b>Arduino</b></span> prepared a bot(line follower and obstacle avoider) for Robocity</div><br><div class="box" data-aos="zoom-in-up"><span class="boxin"><b>Html5</b></span> used it for preparing layout of this web page.</div><br><div class="box" data-aos="zoom-in-up"><span class="boxin"><b>CSS</b></span> used for styling this web page.</div><br><div class="box" data-aos="zoom-in-up"><span class="boxin"><b>Bootstrap</b></span> used for styling this web page.</div>
+      <div class="col-sm-6"><div class="box" data-aos="zoom-in-up"><span class="boxin"><b>C++ and C</b></span>   most preferrable languages for competitive programming.</div><br><div class="box" data-aos="zoom-in-up"><span class="boxin"><b>Python</b></span> used for my projects on web scraping.</div><br><div class="box" data-aos="zoom-in-up"><span class="boxin"><b>Git</b></span> the only VCS which I use to keep track of my projects.</div><br><div class="box" data-aos="zoom-in-up"> <span class="boxin"><b>Django</b></span> backend framework used in most of my projects.
+      </div><br><div class="box" data-aos="zoom-in-up"><span class="boxin"><b>Selenium</b></span> used for my project on web scraping.</div><br><div class="box" data-aos="zoom-in-up"><span class="boxin"><b>Html5 and CSS3</b></span> used it for preparing layout of this web page.</div><br><div class="box" data-aos="zoom-in-up"><span class="boxin"><b>MySQL</b></span> RDBMS I prefer.</div><br><div class="box" data-aos="zoom-in-up"><span class="boxin"><b>Bootstrap</b></span> used for styling this web page.</div>
     </div></div></div></div></div>
 
 
@@ -177,14 +180,14 @@
   <div class="col-sm-1"></div><div class="col-sm-5">  <div class="box" data-aos="fade-down"
      data-aos-anchor-placement="center-bottom">
      <h5><b>Webscraping using python</b></h5><hr>
-        The project was created using python3 and selenium.With the help of this python script ones
-          can easily submit a problem to codechef through the terminal without logging in. Click<span class="boxin"> <a href="https://github.com/promaroy/autocoding">here</a></span> to view the project.
+        The project was created using python3 and selenium.With the help of this python script one
+          can easily submit a problem to codechef,spoj,codeforces,etc. through the terminal without logging in. Click<span class="boxin"> <a href="https://github.com/promaroy/login_and_submit_code_via_terminal">here</a></span> to view the project.
     </div></div></div><br><br>
  <div class="row"><div class="col-sm-5">
     <div class="box" data-aos="fade-up"
-     data-aos-anchor-placement="center-bottom">  <h5><b>Django hello world app</b></h5><hr>
-        This project was created using a python framework django.It is a simple hello world app
-          made as a part of glug task.Hope to improve it in near future.<br> Click <span class="boxin"><a href="https://github.com/promaroy/django1">here</a></span> to view the project.
+     data-aos-anchor-placement="center-bottom">  <h5><b>Django Blog</b></h5><hr>
+        This project was created using a python framework django.It is a simple blog app containing
+        functionalities like authentication,comment system,etc.Hope to improve it in near future.<br> Click <span class="boxin"><a href="https://github.com/promaroy/blog-django">here</a></span> to view the project.
     </div></div><div class="col-sm-1"></div><div class="col-sm-5"><div class="box" data-aos="fade-down"
      data-aos-anchor-placement="center-bottom"><h5><b>Weather app</b></h5><hr>
     This project was created in Django.It calls an API to display the weather of any city around the world. I am currently working on this project to further improve its functionality.<br> Click <span class="boxin"><a href="https://github.com/promaroy/weatherapp">here</a></span> to view the project.</div>
@@ -192,8 +195,34 @@
 
   <!-- Left and right controls -->
 
+<div id="section5">
+  <div class="edu"><h1 class="head"><b>Achievements</b></h1><br><h3 class="quote"><i>Make an empty space in any corner of your mind<br> and creativity will instantly fill it.</i><br><b>--Dee Hock</b></h3>
+  </div><div class="each">
+  <br><br>
+  <div class="container"><div class="sec">
+    <div class="row">
 
-    <div id="section5">  <div class="head">  <div class="edu"><a href="#" class="fa fa-facebook"></a>
+      <div class="col-sm-5">
+      <div class="box" data-aos="fade-up"
+     data-aos-anchor-placement="center-bottom"><h5><b>Scholastic achievements</b></h5><hr>
+        Was ranked first in CBSE Boards Exam(Class 12) in school.<br> Was ranked third in ICSE Boards Exam(Class 10) in school.
+  </div>  </div><br>
+  <div class="col-sm-1"></div><div class="col-sm-5">  <div class="box" data-aos="fade-down"
+     data-aos-anchor-placement="center-bottom">
+     <h5><b>Test Scores</b></h5><hr>
+        Achieved a global rank of 61 in January COOKOFF conducted by Codechef.
+    </div></div></div><br><br>
+ <div class="row"><div class="col-sm-5">
+    <div class="box" data-aos="fade-up"
+     data-aos-anchor-placement="center-bottom">  <h5><b>Science Exhibition</b></h5><hr>
+        Our team was ranked first in a science model making competition Constructo organised by Team Aaviskar of NIT Durgapur.
+    </div></div><div class="col-sm-1"></div><div class="col-sm-5"><div class="box" data-aos="fade-down"
+     data-aos-anchor-placement="center-bottom"><h5><b>Smart India Hackathon(2020)</b></h5><hr>
+    Our team has qualified for Smart India Hackathon Finals 2020, Software Edition, under of problem statement of Ministry of Women and Child Development.
+  </div></div></div></div><br><br></div></div>
+
+
+    <div id="section6">  <div class="head">  <div class="edu"><a href="#" class="fa fa-facebook"></a>
           <a href="#" class="fa fa-linkedin"></a><h5>Contact No: 8420042422<br>Email:promaroy20@gmail.com</h5>
   <a href="#section1"><i class="fa fa-angle-double-up" style="font-size:36px"></i></a>
 </div></div></div>
