--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <h2 class="head"><b>---Proma Roy---</b></h2>
       <h4 class="q"><a href="https://goo.gl/maps/FNTzXZYnj5K7RUTF9">
           <i class="fa fa-map-marker" style="font-size:24px" ></i>
-        </a>Address:Barrackpore,Kolkata-700122</h4>
+        </a>Barrackpore,Kolkata-700122</h4>
     <h4 class="q">  B.Tech(Computer science and engineering),National Institute of Technology,Durgapur</h4>
   </div></div></div>
 
