updated projects section

--- a/index.html
+++ b/index.html
@@ -171,11 +171,24 @@
   <div class="container"><div class="sec">
     <div class="row">
 
+
       <div class="col-sm-5">
       <div class="box" data-aos="fade-up"
-     data-aos-anchor-placement="center-bottom"><h5><b>Voice to text conversion</b></h5><hr>
-             This project was created using python3.It uses Google audio recogniser to convert speech to text.The prerequisites for setting
-               up this project have been mentioned in the readme.md file.Click <span class="boxin"><a href="https://github.com/promaroy/speech_recog">here</a></span> to view the project.
+     data-aos-anchor-placement="center-bottom"><h5><b>Learning Disability App(ongoing)</b></h5><hr>
+             Currently working on this project under the supervision of Director of NIT Durgapur.It involves developing games for the disabled using visual and audio effects.More updates
+             will be given recently
+  </div>  </div><br>
+  <div class="col-sm-1"></div><div class="col-sm-5">  <div class="box" data-aos="fade-down"
+     data-aos-anchor-placement="center-bottom">
+     <h5><b>App for Poshan Abhiyan workers(ongoing)</b></h5><hr>
+        Currently working on this project for Smart India Hackathon Finals 2020. It includes biometric registering and
+        attendance of patients. It alerts the health workers of patients who missed their doses. It sends notifications to patients through sms API.
+    </div></div></div><br><br><div class="row">
+      <div class="col-sm-5">
+      <div class="box" data-aos="fade-up"
+     data-aos-anchor-placement="center-bottom"><h5><b>Random Question Generator</b></h5><hr>
+             This project was created using python3 and MySQL.It generates random questions and stores them in a pdf using fpdf module.The prerequisites for setting
+               up this project have been mentioned in the readme.md file.Click <span class="boxin"><a href="https://github.com/promaroy/Random_Question_Generator">here</a></span> to view the project.
   </div>  </div><br>
   <div class="col-sm-1"></div><div class="col-sm-5">  <div class="box" data-aos="fade-down"
      data-aos-anchor-placement="center-bottom">
@@ -210,7 +223,7 @@
   <div class="col-sm-1"></div><div class="col-sm-5">  <div class="box" data-aos="fade-down"
      data-aos-anchor-placement="center-bottom">
      <h5><b>Test Scores</b></h5><hr>
-        Achieved a global rank of 61 in January COOKOFF conducted by Codechef.
+        Achieved a global rank of 60 in January COOKOFF conducted by Codechef.
     </div></div></div><br><br>
  <div class="row"><div class="col-sm-5">
     <div class="box" data-aos="fade-up"
