--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <div class="box" data-aos="fade-up"
      data-aos-anchor-placement="center-bottom"><h5><b>Inventory Management System</b></h5><hr>
              This application developed using Django is used to keep track of products (sold, bought or edited). Also it shows alert when the quantity of an item has reached it's threshold value.
-             It has been hosted at: <span class="boxin"><a href="promaroy.pythonanywhere.com">Here</a>
+             It has been hosted at: <span class="boxin"><a href="http://promaroy.pythonanywhere.com">Here</a>
   </div>  </div><br>
   <div class="col-sm-1"></div><div class="col-sm-5">  <div class="box" data-aos="fade-down"
      data-aos-anchor-placement="center-bottom">
