--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <div class="box" data-aos="flip-right"><h6>Bholananda National Vidyalaya</h6><br><span class="boxin">Location</span> Barrackpore,Kolkata-700122
                 <br><span class="boxin">Years present</span>2016-2018<br> Scored 95.4% in CBSE Boards.</div><br><br>
       <div class="box" data-aos="flip-right"><h6>National Institute of Technology,Durgapur</h6><span class="boxin">Location</span> Durgapur<br>
-        <span class="boxin">Years present</span>2018-2022<br> CGPA-8.74/10.0 till 3rd sem.</div><div class="col-sm-3"> </div></div> </div></div></div>
+        <span class="boxin">Years present</span>2018-2022<br> CGPA-8.92/10.0 till 4th sem.</div><div class="col-sm-3"> </div></div> </div></div></div>
   <br><br></div> <div id="section3">
    <div class="edu"><h1 class="head">Technical Skills</h1><br><p class="quote"><i>Skill and confidence are unconquered army</i><br><b>--George Herbert</b></p>
    </div><div class="each"><br><br><div class="container">
